fixing display on mobile

--- a/styles.css
+++ b/styles.css
@@ -523,12 +523,12 @@ form {
   background-color: white;
 }
 
-@media only screen and (max-width: 600px) {
-  .navbar {
+@media only screen and (max-width: 768px) {
+  /* .navbar {
     display: flex;
     flex-direction: column;
     gap: 20px;
-  }
+  } */
 
   .task-info {
     gap: 200px;
